--- a/packages/@n8n/nodes-langchain/package.json
+++ b/packages/@n8n/nodes-langchain/package.json
@@ -42,6 +42,7 @@
       "dist/credentials/QdrantApi.credentials.js",
       "dist/credentials/SearXngApi.credentials.js",
       "dist/credentials/SerpApi.credentials.js",
+      "dist/credentials/TrueFoundryAiGatewayApi.credentials.js",
       "dist/credentials/VercelAiGatewayApi.credentials.js",
       "dist/credentials/WeaviateApi.credentials.js",
       "dist/credentials/WolframAlphaApi.credentials.js",
@@ -90,6 +91,7 @@
       "dist/nodes/llms/LMChatLemonade/LmChatLemonade.node.js",
       "dist/nodes/llms/LMChatOllama/LmChatOllama.node.js",
       "dist/nodes/llms/LmChatOpenRouter/LmChatOpenRouter.node.js",
+      "dist/nodes/llms/LmChatTrueFoundryAiGateway/LmChatTrueFoundryAiGateway.node.js",
       "dist/nodes/llms/LmChatVercelAiGateway/LmChatVercelAiGateway.node.js",
       "dist/nodes/llms/LmChatXAiGrok/LmChatXAiGrok.node.js",
       "dist/nodes/llms/LMChatOpenAi/LmChatOpenAi.node.js",
